--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.9.7",
+    "node.js": "^0.0.1-security"
   }
 }
